<resources>
    <string name="app_name">Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="article_title">Article Title</string>
    <string name="description">Description</string>
    <string name="author">Author:</string>
    <string name="star_icon">star icon</string>
    <string name="rating">Rating:</string>
    <string name="uploaded">Uploaded:</string>
    <string name="rate_the_article_now">Rate the article now</string>
    <string name="comments">Comments</string>
    <string name="give_it_a_rate">Give it a rate</string>
    <string name="not_now">Not now</string>
    <string name="submit">Submit</string>
    <string name="activity_history_here">Activity history here...</string>
    <string name="activity_history">Activity history</string>
    <string name="sign_out">Sign out</string>
    <string name="account_information">Account information</string>
    <string name="user_icon">user icon</string>
    <string name="you_have_already_rated_this_article">You have already rated this article!</string>
    <string name="ok">OK</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="add_a_comment">Add a Comment ...</string>
    <string name="your_comment">Your comment ...</string>
    <string name="let_s_discover_some_interesting_article">Let\'s discover some interesting articles</string>
    <string name="search_for_a_course">Search for a course ...</string>
    <string name="what_s_new">What\'s new?</string>
    <string name="the_top_rated_article">The top rated article</string>
    <string name="cross_platform_learning_environment">Cross Platform Learning Environment</string>
    <string name="cple">CPLE</string>
</resources>